# hanal

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/hanal/: Except.hpp  HanalApi.hpp  hanal_api.h
pylib/: __init__.py  sejong_align.py  sejong_corpus.py  trie.py
rsc/: morph.val.idx  morph.val.len
script/: align_syllable_to_morpheme.py  make_syll_morph_dic.py  sejong_tagged.written.sample.utf-16le  sejong_tagged_to_crf_train.py  sejong_tagged_to_word_per_line.py
src/main/cpp/hanal/: Char.cpp  Char.hpp  Except.cpp  HanalImpl.cpp  HanalImpl.hpp  MappedDic.hpp  Morph.cpp  Morph.hpp  MorphDic.cpp  MorphDic.hpp  Option.cpp  Option.hpp  SejongTag.hpp  StateFeatDic.cpp  StateFeatDic.hpp  TransMat.cpp  TransMat.hpp  Trie.cpp  Trie.hpp  Util.cpp  Util.hpp  ViterbiTrellis.cpp  ViterbiTrellis.hpp  Word.cpp  Word.hpp  hanal_api.cpp  macro.hpp
src/main/python/: __init__.py  sejong_align.py  sejong_corpus.py  trie.py
src/main/scripts/: align_syllable_to_morpheme.py  make_state_feat_dic.py  make_syll_morph_dic.py  make_transition_matrix.py  sejong_tagged.spoken.sample.utf-16le  sejong_tagged_to_word_per_line.py
src/test/cpp/: gmock_main.cpp
src/test/cpp/hanal/: CharTest.cpp  MorphDicTest.cpp  StateFeatDicTest.cpp  TransMatTest.cpp  TrieTest.cpp  WordTest.cpp  hanal_api_test.cpp
